k8s/k3s_prod/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app: plex
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:latest
          ports:
            - name: app-port
              containerPort: 32400
          volumeMounts:
            - name: media-volume
              mountPath: /media
              readOnly: true
            - name: config-volume
              mountPath: /config
      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: plex-media-pvc
        - name: config-volume
          persistentVolumeClaim:
            claimName: plex-config-pvc
