k8s/k3s_prod/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: plex
  name: plex
  labels:
    app: plex
spec:
  type: ClusterIP
  ports:
    - name: service-port
      port: 80
      targetPort: app-port
      protocol: TCP
  selector:
    app: plex
