k8s/k3s_prod/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  annotations:
    kubernetes.io/ingress.ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web-private
spec:
  rules:
    - host: plex.twop.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  name: service-port
